--- a/Lab05/imagenes.qrc
+++ b/Lab05/imagenes.qrc
@@ -3,5 +3,6 @@
         <file>imagenes/Pacmandeff.png</file>
         <file>imagenes/empty.png</file>
         <file>imagenes/pared.jpg</file>
+        <file>imagenes/v.png</file>
     </qresource>
 </RCC>
